# mkui

./: .projections.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml  quality.yml  release.yml
examples/: demo.rs  demo_reactive.rs  graphics_demo.rs  media_viewer.rs
src/: app.rs  component.rs  component_state.rs  context.rs  event.rs  focus.rs  i18n.rs  layout.rs  lib.rs  render.rs  signal.rs  slots.rs  style.rs  terminal.rs
src/components/: command_palette.rs  container.rs  for_each.rs  graphics_components.rs  header.rs  list.rs  logo.rs  mod.rs  panel.rs  scrollable.rs  slot_content.rs  slotted_bar.rs  split.rs  status_bar.rs  text.rs  text_input.rs  title.rs
src/components/popup/: confirm.rs  mod.rs
src/graphics/: blocks.rs  framebuffer.rs  kitty.rs  mod.rs  sixel.rs
src/gui/: mod.rs  renderer.rs
src/layout/: mod.rs  split_tree.rs
src/modal/: mod.rs  motions.rs
src/theme/: color.rs  mod.rs
src/tui/: mod.rs  renderer.rs
