[package]
name = "mkui"
version = "0.1.0"
edition = "2021"
description = "A minimalist, typography-driven TUI library with Kitty graphics support"
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/mkui"
keywords = ["tui", "terminal", "ui", "kitty", "sixel"]
categories = ["command-line-interface", "gui"]

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
image = "0.25"
base64 = "0.22"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
