[package]
name = "mkui"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "A minimalist, typography-driven UI library targeting terminals and native GUIs"
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/mkui"
keywords = ["tui", "terminal", "ui", "gui", "kitty"]
categories = ["command-line-interface", "gui"]

[features]
default = ["tui", "gui"]
tui = ["crossterm", "base64", "libc"]
gui = ["wgpu", "winit", "glyphon", "pollster", "bytemuck"]

[dependencies]
anyhow = "1.0"
image = "0.25"

# TUI backend (optional, default on)
crossterm = { version = "0.28", optional = true }
base64 = { version = "0.22", optional = true }
libc = { version = "0.2", optional = true }

# GUI backend (optional, default on)
wgpu = { version = "28", optional = true }
winit = { version = "0.30", optional = true }
glyphon = { version = "0.10", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
